<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/family" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/subname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/year" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/city" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/school" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/qualifier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/languages" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>